# singularity-language-registry

./: .envrc  .gitignore  .gitmessage  AGENTS.md  AGENTS.md.release  CLAUDE_AUTO_APPROVE_SETUP.md  CONTRIBUTING.md  Cargo.toml  ORG_GITHUB_ACTIONS_SETUP.md  README.md  WORKFLOWS_SETUP.md  build.rs  clippy.toml  flake.nix  justfile  setup-hooks.sh
.githooks/: pre-commit  pre-push
.github/: CACHE_SETUP.md  branch-protection.md  pull_request_template.md
.github/scripts/: setup-deploy-key.sh
.github/workflows/: automated-ops.yml  ci.yml  claude-review.yml  publish-snapshot.yml  release.yml  sync-linguist.yml  validate-snapshot.yml
examples/: usage.rs
org-repos-setup/: QUICK_START.md  README.md  setup-script.sh
org-repos-setup/.github/: README.md  SECURITY.md  SUPPORT.md
org-repos-setup/.github/workflow-templates/: rust-nix-ci.properties.json  rust-nix-ci.yml  rust-nix-release.properties.json  rust-nix-release.yml
org-repos-setup/github-actions/: README.md
org-repos-setup/github-actions/build-crate-package/: README.md  action.yml
org-repos-setup/github-actions/generate-release-reports/: README.md  action.yml
org-repos-setup/github-actions/setup-nix-rust/: README.md  action.yml
org-repos-setup/github-workflows/: README.md
org-repos-setup/github-workflows/.github/workflows/: rust-nix-ci.yml  rust-nix-release.yml
src/: detection.rs  file_classifier_generated.rs  heuristics_generated.rs  languages_metadata_generated.rs  lib.rs  metadata.rs  registry.rs  utils.rs
tools/: linguist_sync.rs
tools/linguist_to_snapshot/src/: main.rs
